CMAKE_MINIMUM_REQUIRED (VERSION 3.10)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/../cmake")
PROJECT (ATSAPP C)
add_subdirectory(.. build)
FIND_PACKAGE (ATS REQUIRED)
IF (NOT ATS_FOUND)
	MESSAGE (FATAL_ERROR ”ATS Not Found!”)
ENDIF ()
ATS_INCLUDE (.)
set(CMAKE_C_FLAGS "-DATS_MEMALLOC_LIBC -D_DEFAULT_SOURCE -latslib")
ATS_COMPILE (TEST_SRC
	main.dats
	)
ADD_EXECUTABLE(tests ${TEST_SRC})
target_link_libraries(tests ats-unit-testing)
